feature: 修复跟踪者边栏的tip显示问题，改为鼠标离开目标时，tips自动消失。 同时增加 相关事故单 边栏 的tip功能

--- a/app/views/irm/watchers/_sidebar_watcher_list.html.erb
+++ b/app/views/irm/watchers/_sidebar_watcher_list.html.erb
@@ -44,15 +44,31 @@
     <script type="text/javascript">
       $(function(){
           $('.watcher_info').each(function(){
-              qtip = Ext.create('Ext.tip.ToolTip', {
+              var qtip = Ext.create('Ext.tip.ToolTip', {
                           target: this,
                           id: 'person-info-tip-' + $(this).attr('pid'),
                           anchor: 'left',
                           title: $(this).attr('pname'),//"<a href='/people/" + $(this).attr('pid') + "'>" + $(this).attr('pname') + "</a>",
                           html: "<iframe frameborder=0 scrolling='no'  src='/people/" + $(this).attr('pid') + "/info_card' style='width:100%;height:90px;'></iframe>",
                           width: 400,
-                          autoHide: false,
-                          closable: true
+                          autoHide: true,
+                          dismissDelay: 0,
+                          closable: false,
+                          listeners: {
+                            'afterrender': function(){
+                                this.el.on('mouseout', function(e){
+                                    if(!qtip.getChildByElement(this)){
+                                        qtip.hide();
+                                    }
+                                });
+
+                                this.el.on('mouseover', function(e){
+                                    qtip.suspendEvents();
+                                    qtip.show();
+                                });
+
+                            }
+                          }
                       });
           });
       });
