--- a/app/views/icm/incident_requests/_sidebar_relation_list.html.erb
+++ b/app/views/icm/incident_requests/_sidebar_relation_list.html.erb
@@ -41,3 +41,38 @@
     </div>
 </div>
 <% end %>
+
+<% unless limit_device? %>
+    <script type="text/javascript">
+      $(function(){
+          $('.request_info').each(function(){
+              var qtip = Ext.create('Ext.tip.ToolTip', {
+                          target: this,
+                          id: 'request-info-tip-' + $(this).attr('request_id'),
+                          anchor: 'left',
+                          title: "<a href='/incident_requests/" + $(this).attr('request_id') + "/journals/new'>" + $(this).attr('request_name') + "</a>",
+                          html: "<iframe frameborder=0 scrolling='no'  src='/incident_requests/" + $(this).attr('request_id') + "/info_card' style='width:100%;height:90px;'></iframe>",
+                          width: 400,
+                          autoHide: true,
+                          dismissDelay: 0,
+                          closable: false,
+                          listeners: {
+                            'afterrender': function(){
+                                this.el.on('mouseout', function(e){
+                                    if(!qtip.getChildByElement(this)){
+                                        qtip.hide();
+                                    }
+                                });
+
+                                this.el.on('mouseover', function(e){
+                                    qtip.suspendEvents();
+                                    qtip.show();
+                                });
+
+                            }
+                          }
+                      });
+          });
+      });
+    </script>
+<% end %>
