feature: 改事故单看板模式和列表模式切换目前是使用了按钮的方式，并且只有一个按钮。 将其修改为2个独立的连接，明确：看板模式和列表模式，同时用图标按钮的方式来实现。

--- a/app/views/icm/incident_requests/kanban_index.html.erb
+++ b/app/views/icm/incident_requests/kanban_index.html.erb
@@ -1,12 +1,13 @@
 <%= common_title(:model_name=>Icm::IncidentRequest.name,:action_meaning=>t(:kanban_mode)) %>
-<% if allow_to_function?(:view_icm_kanban) %>
-  <div class="toolbar">
-      <span class="toggleButtons">
-        <%= link_to(toggle_img("listViewIcon"),{:controller => "icm/incident_requests",:action=>"index"},{:title=>t(:list_mode)}) %>
-        <%= link_to(toggle_img("singleUserViewIcon",true),{:action=>"kanban_index"},{:href=>"javascript:void(0)",:title=>t(:kanban_mode)}) %>
-      </span>
-  </div>
 
+
+<% if allow_to_function?(:view_icm_kanban) %>
+<div class="toolbar">
+  <div class="button-group">
+    <div class="button"><%= link_to(content_tag(:img, "", {:src => "/images/s.gif", :class => "list-mode"}) + t(:list_mode), {:controller => "icm/incident_requests",:action=>"index"})%></div>
+    <div class="button selected"><%= link_to(content_tag(:img, "", {:src => "/images/s.gif", :class => "preview-mode"}) + t(:kanban_mode),{:href => "javascript:void(0)"})%></div>
+  </div>
+</div>
 <% end %>
 
 <% if allow_to_function?(:view_icm_kanban)%>
