--- a/app/views/icm/incident_requests/index.html.erb
+++ b/app/views/icm/incident_requests/index.html.erb
@@ -1,13 +1,13 @@
 <%= common_title %>
 
-<div class="toolbar">
 <% if allow_to_function?(:view_icm_kanban) %>
-  <span class="toggleButtons" style="_display: none;">
-    <%= link_to(toggle_img("listViewIcon",true),{:controller => "icm/incident_requests",:action=>"index"},{:href=>"javascript:void(0)",:title=>t(:list_mode)}) %>
-    <%= link_to(toggle_img("singleUserViewIcon"),{:action=>"kanban_index"},{:title=>t(:kanban_mode)}) %>
-  </span>
-<% end %>
+<div class="toolbar">
+  <div class="button-group">
+    <div class="button selected"><%= link_to(content_tag(:img, "", {:src => "/images/s.gif", :class => "list-mode"}) + t(:list_mode), {}, {:href => "javascript:void(0)"})%></div>
+    <div class="button"><%= link_to(content_tag(:img, "", {:src => "/images/s.gif", :class => "preview-mode"}) + t(:kanban_mode), {:action=>"kanban_index"})%></div>
+  </div>
 </div>
+<% end %>
 
 <%= view_filter("ICM_INCIDENT_REQUEST_INDEX_B","ICM_INCIDENT_REQUESTS","incident_requests") %>
 
