--- a/app/views/irm/mail_settings/index.html.erb
+++ b/app/views/irm/mail_settings/index.html.erb
@@ -5,7 +5,7 @@
     <table cellpadding="0" cellspacing="0" border="0">
       <tbody>
         <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_irm_global_setting) %></h2></td>
+          <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_irm_mail_setting) %></h2></td>
           <td id="topButtonRow" class="pbButton">
             <div class="button"><%= link_to t(:edit), {:action => "edit"}%></div>
           </td>
@@ -15,49 +15,88 @@
   </div>
   <div class="pbBody">
     <div class="pbSubheader tertiaryPalette">&nbsp;
-      <h3><%=t(:label_common_info)%><span class="titleSeparatingColon"></span></h3>
+      <h3><%=t(:label_irm_mail_smtp_server)%><span class="titleSeparatingColon"></span></h3>
     </div>
     <div class="pbSubsection">
       <table class="detailList" cellpadding="0" cellspacing="0" border="0">
         <tbody>
             <tr>
-              <td class="labelCol"><label><%=(@settings.query_by_code("APPLICATION_TITLE").first[:name])%></label></td>
-              <td class="data2Col"><%= @settings.query_by_code("APPLICATION_TITLE").first[:value]%>
+              <td class="labelCol"><label><%= t :label_irm_mail_from_address %></label></td>
+              <td class="data2Col"><%= @smtp_setting.from_address%>
               </td>
             </tr>
             <tr>
-              <td class="labelCol"><label><%=(@settings.query_by_code("HOST_NAME").first[:name])%></label></td>
-              <td class="data2Col"><%= @settings.query_by_code("HOST_NAME").first[:value]%>
+              <td class="labelCol"><label><%= t :label_irm_mail_prefix %></label></td>
+              <td class="data2Col"><%= @smtp_setting.email_prefix%>
               </td>
             </tr>
             <tr>
-              <td class="labelCol"><label><%=(@settings.query_by_code("HOST_PATH").first[:name])%></label></td>
-              <td class="data2Col"><%= @settings.query_by_code("HOST_PATH").first[:value]%>
+              <td class="labelCol"><label><%= t :label_irm_mail_smtp_port %></label></td>
+              <td class="data2Col"><%= @smtp_setting.port%>
               </td>
             </tr>
             <tr>
-              <td class="labelCol"><label><%=(@settings.query_by_code("HOST_PORT").first[:name])%></label></td>
-              <td class="data2Col"><%= @settings.query_by_code("HOST_PORT").first[:value]%>
+              <td class="labelCol"><label><%= t :label_irm_mail_host_name %></label></td>
+              <td class="data2Col"><%= @smtp_setting.host_name%>
               </td>
             </tr>
             <tr>
-              <td class="labelCol"><label><%=(@settings.query_by_code("EMISSION_EMAIL_ADDRESS").first[:name])%></label></td>
-              <td class="data2Col"><%= @settings.query_by_code("EMISSION_EMAIL_ADDRESS").first[:value]%>
+              <td class="labelCol"><label><%= t :label_irm_mail_timeout %></label></td>
+              <td class="data2Col"><%= @smtp_setting.timeout%>
               </td>
             </tr>
             <tr>
-              <td class="labelCol"><label><%=(@settings.query_by_code("UPLOAD_FILE_LIMIT").first[:name])%></label></td>
-              <td class="data2Col"><%= @settings.query_by_code("UPLOAD_FILE_LIMIT").first[:value]%>
+              <td class="labelCol"><label><%= t :label_irm_mail_username %></label></td>
+              <td class="data2Col"><%= @smtp_setting.username%>
               </td>
             </tr>
             <tr>
-              <td class="labelCol"><label><%=(@settings.query_by_code("TIMEZONE").first[:name])%></label></td>
-              <td class="data2Col"><%= Irm::LookupValue.multilingual.query_by_lookup_code(@settings.query_by_code("TIMEZONE").first[:value]).first.wrap_meaning%>
+              <td class="labelCol"><label><%= t :label_irm_mail_password %></label></td>
+              <td class="data2Col"><%= @smtp_setting.password%>
               </td>
             </tr>
         </tbody>
       </table>
     </div>
 
+    <div class="pbSubheader tertiaryPalette">&nbsp;
+      <h3><%=t(:label_irm_mail_imap_server)%><span class="titleSeparatingColon"></span></h3>
+    </div>
+    <div class="pbSubsection">
+      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
+        <tbody>
+            <tr>
+              <td class="labelCol"><label><%= t :label_irm_mail_protocol %></label></td>
+              <td class="data2Col"><%= @imap_setting.protocol%>
+              </td>
+            </tr>
+            <tr>
+              <td class="labelCol"><label><%= t :label_irm_mail_host_name %></label></td>
+              <td class="data2Col"><%= @imap_setting.host_name%>
+              </td>
+            </tr>
+            <tr>
+              <td class="labelCol"><label><%= t :label_irm_mail_imap_port %></label></td>
+              <td class="data2Col"><%= @imap_setting.port%>
+              </td>
+            </tr>
+            <tr>
+              <td class="labelCol"><label><%= t :label_irm_mail_timeout %></label></td>
+              <td class="data2Col"><%= @imap_setting.timeout%>
+              </td>
+            </tr>
+            <tr>
+              <td class="labelCol"><label><%= t :label_irm_mail_username %></label></td>
+              <td class="data2Col"><%= @imap_setting.username%>
+              </td>
+            </tr>
+            <tr>
+              <td class="labelCol"><label><%= t :label_irm_mail_password %></label></td>
+              <td class="data2Col"><%= @imap_setting.password%>
+              </td>
+            </tr>
+        </tbody>
+      </table>
+    </div>
   </div>
 </div>
