--- a/public/themes/default/stylesheets/form.css
+++ b/public/themes/default/stylesheets/form.css
@@ -98,6 +98,7 @@ form .pbBottomButtons > table {border-top:1px solid #FFFFFF;padding:0 !important
 }
 .wizard-block .detailList .dataCol{width: 40%;}
 .wizard-block .dataCol{padding:2px 2px 2px 10px;text-align:left;}
+.tip-span {display:block}
 /*******************************************************/
 /*show page*/
 .setupTab .page-block .detailList tr td,
