--- a/app/views/icm/incident_journals/_new_form.html.erb
+++ b/app/views/icm/incident_journals/_new_form.html.erb
@@ -426,7 +426,8 @@ function reset_rich_text(){
 
 <% content_for :sidebar do%>
     <%= render :partial =>"/irm/watchers/sidebar_watcher_list",
-               :locals => {:watchable => @incident_request, :editable => !@incident_request.close?} %>
+               :locals => {:watchable => @incident_request,
+                           :editable => !@incident_request.close?} %>
     <%= render :partial =>"/icm/incident_requests/sidebar_attachment_list"%>
     <%= render :partial =>"/icm/incident_requests/sidebar_relation_list", :locals => {:incident_request => @incident_request}%>
 <% end %>
