--- a/public/themes/default/stylesheets/icons.ie6.css
+++ b/public/themes/default/stylesheets/icons.ie6.css
@@ -403,3 +403,16 @@ img.lookupIconOn {
     width: 20px;
     vertical-align: middle;
 }
+
+.grey-up-arrow {
+    background-image: url("../images/grey_up_arrow.png");
+    height: 16px;
+    width: 16px;
+    vertical-align: middle;
+}
+.grey-down-arrow {
+    background-image: url("../images/grey_down_arrow.png");
+    height: 16px;
+    width: 16px;
+    vertical-align: middle;
+}
