fixed: 暂时屏蔽边栏排序功能，同时调整safari和chrome中，边栏LOV后的按钮会换行的问题

--- a/app/views/icm/incident_requests/_sidebar_relation_list.html.erb
+++ b/app/views/icm/incident_requests/_sidebar_relation_list.html.erb
@@ -9,12 +9,12 @@
           <tbody id="new_relation_form">
             <tr>
               <td>
-                <div id="relation_select">
-                <%= lov_field_tag "icm_relation", Icm::IncidentRequest %>
+                <div id="relation_select" style="float:left;">
+                  <%= lov_field_tag "icm_relation", Icm::IncidentRequest %>
+                </div>
                   <div class="float-right">
                     <div class="button"><%= submit_tag(t(:add))%></div>
                   </div>
-                </div>
               </td>
             </tr>
           </tbody>
