fixed: 为firefox、chrome、safari微调button样式，消除展示样式不一样的问题

--- a/public/themes/default/stylesheets/button.ie6.css
+++ b/public/themes/default/stylesheets/button.ie6.css
@@ -115,4 +115,4 @@ body .page-block .pbBody .pbSubheader .hideListButton {
 
 .button a img{vertical-align: -3px; margin-right:5px;}
 
-.float-right .button{float:right;display:inline;}
+.float-right {float:right;}
