--- a/app/views/icm/incident_journals/_new_form.html.erb
+++ b/app/views/icm/incident_journals/_new_form.html.erb
@@ -32,6 +32,7 @@
       -moz-border-radius: 0 4px 4px 0;
       -webkit-border-top-right-radius: 4px;
       -webkit-border-bottom-right-radius: 4px;
+      box-sizing: content-box;
   }
 
   div.reply div.replyHeader[submit_by="<%= Irm::Person.current.id%>"]{
