--- a/public/themes/default/stylesheets/button.css
+++ b/public/themes/default/stylesheets/button.css
@@ -5,9 +5,9 @@ div.button, div.as-button, div.gray-button {
     line-height: 20px;
 }
 
-
 div.button a {
     -moz-border-radius: 3px 3px 3px 3px;
+    -webkit-border-radius: 3px;
     background: url("../images/btn_sprite.png") repeat-x scroll right top #E8E8E9;
     border-color: #B5B5B5 #B5B5B5 #7F7F7F;
 	border-width: 1px;
@@ -16,14 +16,17 @@ div.button a {
 	color:#333333;
 	display: inline-block;
 	padding: 0 8px 0 8px;
-	height: 20px;
+	height: 24px;
     font-size: 11px;
     font-weight: bold;
-	line-height: 20px;
+	line-height: 24px;
+    box-sizing: content-box;
+    -moz-box-sizing: content-box;
 }
 div.button a:hover{background-position: right -30px;}
 .button input[type="submit"] {
     -moz-border-radius: 3px 3px 3px 3px;
+    -webkit-border-radius: 3px;
     background: url("../images/btn_sprite.png") repeat-x scroll right top #E8E8E9;
     border-color: #B5B5B5 #B5B5B5 #7F7F7F;
 	border-width: 1px;
@@ -32,51 +35,51 @@ div.button a:hover{background-position: right -30px;}
 	color:#333333;
 	display: inline-block;
 	padding: 0 5px 2px 5px;
-    padding: 0 5px 0 5px\9;
+    padding: 0 7px 0 7px\9;
 	height: 22px;
     height: 20px\9;
     font-size: 11px;
     font-weight: bold;
-	line-height: 22px;
+	line-height: 20px;
     line-height: 20px\9;
+    box-sizing: content-box;
+    -moz-box-sizing: content-box;
 }
 
-@media screen and (-webkit-min-device-pixel-ratio:0) {
+@media screen and (-webkit-min-device-pixel-ratio:0){
+div.button a {
+    -webkit-border-radius: 3px;
+    background: url("../images/btn_sprite.png") repeat-x scroll right top #E8E8E9;
+    border-color: #B5B5B5 #B5B5B5 #7F7F7F;
+	border-width: 1px;
+    border-style: solid;
+	text-decoration: none;
+	color:#333333;
+	display: inline-block;
+	padding: 0 7px 0 7px;
+	height: 22px;
+    font-size: 11px;
+    font-weight: bold;
+	line-height: 22px;
+    box-sizing: content-box;
+}
 
-    div.button a {
-        -moz-border-radius: 3px 3px 3px 3px;
-        -webkit-border-radius: 3px;
-        background: url("../images/btn_sprite.png") repeat-x scroll right top #E8E8E9;
-        border-color: #B5B5B5 #B5B5B5 #7F7F7F;
-        border-width: 1px;
-        border-style: solid;
-        text-decoration: none;
-        color:#333333;
-        display: inline-block;
-        padding: 0 8px;
-        height: 20px;
-        font-size: 11px;
-        font-weight: bold;
-        line-height: 20px;
-    }
-
-    div.button input[type="submit"] {
-        -moz-border-radius: 3px 3px 3px 3px;
-        -webkit-border-radius: 3px;
-        background: url("../images/btn_sprite.png") repeat-x scroll right top #E8E8E9;
-        border-color: #B5B5B5 #B5B5B5 #7F7F7F;
-        border-width: 1px;
-        border-style: solid;
-        text-decoration: none;
-        color:#333333;
-        display: inline-block;
-        padding: 0 5px 0 5px;
-        height: 20px;
-        font-size: 11px;
-        font-weight: bold;
-        line-height: 20px;
-    }
-
+.button input[type="submit"] {
+    -webkit-border-radius: 3px;
+    background: url("../images/btn_sprite.png") repeat-x scroll right top #E8E8E9;
+    border-color: #B5B5B5 #B5B5B5 #7F7F7F;
+	border-width: 1px;
+    border-style: solid;
+	text-decoration: none;
+	color:#333333;
+	display: inline-block;
+	padding: 0 6px 2px 6px;
+	height: 20px;
+    font-size: 11px;
+    font-weight: bold;
+	line-height: 22px;
+    box-sizing: content-box;
+}
 }
 
 .button input[type="submit"]:hover{background-position: right -30px; cursor: pointer;}
@@ -229,3 +232,5 @@ body .page-block .pbBody .pbSubheader .hideListButton {
 #bodyColB table * {box-sizing: content-box;}
 
 .button a img{vertical-align: -3px; margin-right:5px;}
+
+.float-right {float:right;display:inline;}
