--- a/app/views/irm/mail_settings/edit.html.erb
+++ b/app/views/irm/mail_settings/edit.html.erb
@@ -16,7 +16,8 @@
     </table>
   </div>
   <div class="pbBody">
-    <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
+    <%= fields_for "smtp_setting", @smtp_setting do |smtp| %>
+    <div class="pbSubheader first tertiaryPalette">
       <span class="pbSubExtra">
         <span class="requiredLegend">
           <span class="requiredExampleOuter">
@@ -25,30 +26,11 @@
           <span class="requiredText"> = <%=t(:label_is_required)%></span>
         </span>
       </span>
-      <h3><%= t(:label_irm_mail_smtp_server) %></h3>
+      <h3><%= t(:label_irm_mail_server) %></h3>
     </div>
     <div class="pbSubsection">
       <table class="detailList" cellpadding="0" cellspacing="0" border="0">
         <tbody>
-            <%= fields_for "smtp_setting", @smtp_setting do |smtp| %>
-            <tr>
-              <td class="labelCol"><label><%= t :label_irm_mail_from_address %></label></td>
-              <td class="data2Col"><%= smtp.text_field :from_address, :jrequired => true%>
-                <span class="tip-span"><%= t :label_irm_mail_smtp_from_address_tip%></span>
-              </td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%= t :label_irm_mail_prefix %></label></td>
-              <td class="data2Col"><%= smtp.text_field :email_prefix, :jrequired => true%>
-                <span class="tip-span"><%= t :label_irm_mail_smtp_prefix_tip %></span>
-              </td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%= t :label_irm_mail_smtp_port %></label></td>
-              <td class="data2Col"><%= smtp.text_field :port, :irm_number_only => true, :jrequired => true%>
-                <span class="tip-span"><%= t :label_irm_mail_smtp_port_tip%></span>
-              </td>
-            </tr>
             <tr>
               <td class="labelCol"><label><%= t :label_irm_mail_host_name %></label></td>
               <td class="data2Col"><%= smtp.text_field :host_name, :jrequired => true%>
@@ -73,10 +55,45 @@
                 <span class="tip-span"><%= t :label_irm_mail_smtp_password_tip%></span>
               </td>
             </tr>
-            <% end %>
         </tbody>
       </table>
     </div>
+    <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
+      <span class="pbSubExtra">
+        <span class="requiredLegend">
+          <span class="requiredExampleOuter">
+            <span class="requiredExample">&nbsp;</span>
+          </span><span class="requiredMark">*</span>
+          <span class="requiredText"> = <%=t(:label_is_required)%></span>
+        </span>
+      </span>
+      <h3><%= t(:label_irm_mail_smtp_server) %></h3>
+    </div>
+    <div class="pbSubsection">
+      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
+        <tbody>
+            <tr>
+              <td class="labelCol"><label><%= t :label_irm_mail_from_address %></label></td>
+              <td class="data2Col"><%= smtp.text_field :from_address, :jrequired => true%>
+                <span class="tip-span"><%= t :label_irm_mail_smtp_from_address_tip%></span>
+              </td>
+            </tr>
+            <tr>
+              <td class="labelCol"><label><%= t :label_irm_mail_prefix %></label></td>
+              <td class="data2Col"><%= smtp.text_field :email_prefix, :jrequired => true%>
+                <span class="tip-span"><%= t :label_irm_mail_smtp_prefix_tip %></span>
+              </td>
+            </tr>
+            <tr>
+              <td class="labelCol"><label><%= t :label_irm_mail_smtp_port %></label></td>
+              <td class="data2Col"><%= smtp.text_field :port, :irm_number_only => true, :jrequired => true%>
+                <span class="tip-span"><%= t :label_irm_mail_smtp_port_tip%></span>
+              </td>
+            </tr>
+        </tbody>
+      </table>
+    </div>
+    <% end %>
 
     <div class="pbSubheader first tertiaryPalette">
       <span class="pbSubExtra">
@@ -100,33 +117,9 @@
               </td>
             </tr>
             <tr>
-              <td class="labelCol"><label><%= t :label_irm_mail_host_name %></label></td>
-              <td class="data2Col"><%= imap.text_field :host_name, :jrequired => true%>
-                <span class="tip-span"><%= t :label_irm_mail_host_name_tip%></span>
-              </td>
-            </tr>
-            <tr>
               <td class="labelCol"><label><%= t :label_irm_mail_imap_port %></label></td>
               <td class="data2Col"><%= imap.text_field :port, :irm_number_only => true, :jrequired => true%>
                 <span class="tip-span"><%= t :label_irm_mail_imap_port_tip%></span>
-              </td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%= t :label_irm_mail_timeout %></label></td>
-              <td class="data2Col"><%= imap.text_field :timeout, :irm_number_only => true, :jrequired => true%>
-                <span class="tip-span"><%= t :label_irm_mail_timeout_tip%></span>
-              </td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%= t :label_irm_mail_username %></label></td>
-              <td class="data2Col"><%= imap.text_field :username, :jrequired => true%>
-                <span class="tip-span"><%= t :label_irm_mail_imap_username_tip%></span>
-              </td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%= t :label_irm_mail_password %></label></td>
-              <td class="data2Col"><%= imap.text_field :password, :jrequired => true, :type => "password"%>
-                <span class="tip-span"><%= t :label_irm_mail_imap_password_tip%></span>
               </td>
             </tr>
             <% end %>
