--- a/app/views/irm/mail_settings/index.html.erb
+++ b/app/views/irm/mail_settings/index.html.erb
@@ -15,26 +15,11 @@
   </div>
   <div class="pbBody">
     <div class="pbSubheader tertiaryPalette">&nbsp;
-      <h3><%=t(:label_irm_mail_smtp_server)%><span class="titleSeparatingColon"></span></h3>
+      <h3><%=t(:label_irm_mail_server)%><span class="titleSeparatingColon"></span></h3>
     </div>
     <div class="pbSubsection">
       <table class="detailList" cellpadding="0" cellspacing="0" border="0">
         <tbody>
-            <tr>
-              <td class="labelCol"><label><%= t :label_irm_mail_from_address %></label></td>
-              <td class="data2Col"><%= @smtp_setting.from_address%>
-              </td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%= t :label_irm_mail_prefix %></label></td>
-              <td class="data2Col"><%= @smtp_setting.email_prefix%>
-              </td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%= t :label_irm_mail_smtp_port %></label></td>
-              <td class="data2Col"><%= @smtp_setting.port%>
-              </td>
-            </tr>
             <tr>
               <td class="labelCol"><label><%= t :label_irm_mail_host_name %></label></td>
               <td class="data2Col"><%= @smtp_setting.host_name%>
@@ -60,6 +45,31 @@
     </div>
 
     <div class="pbSubheader tertiaryPalette">&nbsp;
+      <h3><%=t(:label_irm_mail_smtp_server)%><span class="titleSeparatingColon"></span></h3>
+    </div>
+    <div class="pbSubsection">
+      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
+        <tbody>
+            <tr>
+              <td class="labelCol"><label><%= t :label_irm_mail_from_address %></label></td>
+              <td class="data2Col"><%= @smtp_setting.from_address%>
+              </td>
+            </tr>
+            <tr>
+              <td class="labelCol"><label><%= t :label_irm_mail_prefix %></label></td>
+              <td class="data2Col"><%= @smtp_setting.email_prefix%>
+              </td>
+            </tr>
+            <tr>
+              <td class="labelCol"><label><%= t :label_irm_mail_smtp_port %></label></td>
+              <td class="data2Col"><%= @smtp_setting.port%>
+              </td>
+            </tr>
+        </tbody>
+      </table>
+    </div>
+
+    <div class="pbSubheader tertiaryPalette">&nbsp;
       <h3><%=t(:label_irm_mail_imap_server)%><span class="titleSeparatingColon"></span></h3>
     </div>
     <div class="pbSubsection">
@@ -71,28 +81,8 @@
               </td>
             </tr>
             <tr>
-              <td class="labelCol"><label><%= t :label_irm_mail_host_name %></label></td>
-              <td class="data2Col"><%= @imap_setting.host_name%>
-              </td>
-            </tr>
-            <tr>
               <td class="labelCol"><label><%= t :label_irm_mail_imap_port %></label></td>
               <td class="data2Col"><%= @imap_setting.port%>
-              </td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%= t :label_irm_mail_timeout %></label></td>
-              <td class="data2Col"><%= @imap_setting.timeout%>
-              </td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%= t :label_irm_mail_username %></label></td>
-              <td class="data2Col"><%= @imap_setting.username%>
-              </td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%= t :label_irm_mail_password %></label></td>
-              <td class="data2Col"><%= @imap_setting.password%>
               </td>
             </tr>
         </tbody>
