--- a/app/views/reports/login_report/_mail.html.erb
+++ b/app/views/reports/login_report/_mail.html.erb
@@ -1,9 +1,12 @@
-<div id="reportChart"></div>
-
+<style type="text/css">
+  table#reportData td,th{
+       padding: 3px 2px 3px 5px;
+  }
+</style>
 <!--  irm datatable      -->
  <div class="irm-datatable">
    <div>
-       <table count="<%=datas[:datas].count%>">
+       <table id="reportData" count="<%=datas[:datas].count%>">
          <thead>
            <tr>
              <th style="width:110px;">
@@ -59,12 +62,12 @@
            </td>
            <td>
              <div>
-               <%= format_date(data[:login_at]) %>
+               <%= show_report_cell(data[:login_at]) %>
              </div>
            </td>
            <td>
              <div>
-               <%= format_date(data[:logout_at]) %>
+               <%= show_report_cell(data[:logout_at]) %>
              </div>
            </td>
          </tr>
@@ -74,57 +77,3 @@
    </div>
  </div>
 <!--  end irm datatable      -->
-<% require_javascript(:extjs) %>
-<% require_css(:extjs) %>
-
-<script type="text/javascript">
-  Ext.onReady(function(){
-    var store = Ext.create('Ext.data.JsonStore', {
-        fields: ['count', 'date'],
-        data: <%=datas[:chart_datas].to_json.html_safe %>
-    });
-
-    Ext.create('Ext.chart.Chart', {
-        renderTo: Ext.get("reportChart"),
-        animate: true,
-        width: Ext.get("reportChart").getComputedWidth()-10,
-        height: 300,
-        store: store,
-        axes: [{
-            type: 'Numeric',
-            position: 'left',
-            fields: ['count'],
-            label: {
-                renderer: Ext.util.Format.numberRenderer('0,0')
-            },
-            grid: true,
-            minimum: 0
-        }, {
-            type: 'Category',
-            position: 'bottom',
-            fields: ['date'],
-            orientation:"vertical",
-        }],
-        series: [{
-            type: 'line',
-            highlight: {
-                size: 7,
-                radius: 7
-            },
-            smooth: true,
-            axis: 'left',
-            xField: 'date',
-            yField: 'count',
-            tips: {
-                    trackMouse: true,
-                    width: 120,
-                    height: 40,
-                    renderer: function(storeItem, item) {
-                        this.setTitle(storeItem.get('date') + '<br />' + storeItem.get('count'));
-                    }
-            }
-        }
-        ]
-    });
-      });
-</script>
