修改事故单报表,添加报表数据导出功能

--- a/app/views/irm/reports/_show_report_actions.html.erb
+++ b/app/views/irm/reports/_show_report_actions.html.erb
@@ -43,4 +43,5 @@
       });
     </script>
 </div>
+<div class="button"><%= link_to t(:export), {:action => "run", :id => @report.id,:format=>:xls},:id=>"exportReport",:class=>"submit",:target=>"_blank"%></div>
 <div class="button"><%= link_to t(:back), {:action => "index"}%></div>
