--- a/app/views/irm/mail_settings/edit.html.erb
+++ b/app/views/irm/mail_settings/edit.html.erb
@@ -32,12 +32,6 @@
       <table class="detailList" cellpadding="0" cellspacing="0" border="0">
         <tbody>
             <tr>
-              <td class="labelCol"><label><%= t :label_irm_mail_host_name %></label></td>
-              <td class="data2Col"><%= smtp.text_field :host_name, :jrequired => true%>
-                <span class="tip-span"><%= t :label_irm_mail_host_name_tip%></span>
-              </td>
-            </tr>
-            <tr>
               <td class="labelCol"><label><%= t :label_irm_mail_timeout %></label></td>
               <td class="data2Col"><%= smtp.text_field :timeout, :irm_number_only => true, :jrequired => true%>
                 <span class="tip-span"><%= t :label_irm_mail_timeout_tip%></span>
@@ -72,6 +66,12 @@
     <div class="pbSubsection">
       <table class="detailList" cellpadding="0" cellspacing="0" border="0">
         <tbody>
+            <tr>
+              <td class="labelCol"><label><%= t :label_irm_mail_smtp_host_name %></label></td>
+              <td class="data2Col"><%= smtp.text_field :host_name, :jrequired => true%>
+                <span class="tip-span"><%= t :label_irm_mail_smtp_host_name_tip%></span>
+              </td>
+            </tr>
             <tr>
               <td class="labelCol"><label><%= t :label_irm_mail_from_address %></label></td>
               <td class="data2Col"><%= smtp.text_field :from_address, :jrequired => true%>
@@ -110,6 +110,12 @@
       <table class="detailList" cellpadding="0" cellspacing="0" border="0">
         <tbody>
             <%= fields_for "imap_setting", @imap_setting do |imap| %>
+            <tr>
+              <td class="labelCol"><label><%= t :label_irm_mail_imap_host_name %></label></td>
+              <td class="data2Col"><%= imap.text_field :host_name, :jrequired => true%>
+                <span class="tip-span"><%= t :label_irm_mail_imap_host_name_tip%></span>
+              </td>
+            </tr>
             <tr>
               <td class="labelCol"><label><%= t :label_irm_mail_protocol %></label></td>
               <td class="data2Col"><%= imap.radio_button(:protocol, "IMAP", :jrequired => true)%>-IMAP&nbsp;&nbsp;<%= imap.radio_button(:protocol, "POP")%>-POP
