--- a/app/views/irm/mail_settings/index.html.erb
+++ b/app/views/irm/mail_settings/index.html.erb
@@ -21,16 +21,6 @@
       <table class="detailList" cellpadding="0" cellspacing="0" border="0">
         <tbody>
             <tr>
-              <td class="labelCol"><label><%= t :label_irm_mail_host_name %></label></td>
-              <td class="data2Col"><%= @smtp_setting.host_name%>
-              </td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%= t :label_irm_mail_timeout %></label></td>
-              <td class="data2Col"><%= @smtp_setting.timeout%>
-              </td>
-            </tr>
-            <tr>
               <td class="labelCol"><label><%= t :label_irm_mail_username %></label></td>
               <td class="data2Col"><%= @smtp_setting.username%>
               </td>
@@ -38,6 +28,11 @@
             <tr>
               <td class="labelCol"><label><%= t :label_irm_mail_password %></label></td>
               <td class="data2Col"><%= @smtp_setting.password%>
+              </td>
+            </tr>
+            <tr>
+              <td class="labelCol"><label><%= t :label_irm_mail_timeout %></label></td>
+              <td class="data2Col"><%= @smtp_setting.timeout%>
               </td>
             </tr>
         </tbody>
@@ -50,6 +45,11 @@
     <div class="pbSubsection">
       <table class="detailList" cellpadding="0" cellspacing="0" border="0">
         <tbody>
+            <tr>
+              <td class="labelCol"><label><%= t :label_irm_mail_smtp_host_name %></label></td>
+              <td class="data2Col"><%= @smtp_setting.host_name%>
+              </td>
+            </tr>
             <tr>
               <td class="labelCol"><label><%= t :label_irm_mail_from_address %></label></td>
               <td class="data2Col"><%= @smtp_setting.from_address%>
@@ -75,6 +75,11 @@
     <div class="pbSubsection">
       <table class="detailList" cellpadding="0" cellspacing="0" border="0">
         <tbody>
+            <tr>
+              <td class="labelCol"><label><%= t :label_irm_mail_imap_host_name %></label></td>
+              <td class="data2Col"><%= @imap_setting.host_name%>
+              </td>
+            </tr>
             <tr>
               <td class="labelCol"><label><%= t :label_irm_mail_protocol %></label></td>
               <td class="data2Col"><%= @imap_setting.protocol%>
