为编程报表添加数据导出为excel的功能

--- a/app/views/irm/reports/edit_program.html.erb
+++ b/app/views/irm/reports/edit_program.html.erb
@@ -24,7 +24,7 @@
                   <td class="dataCol empty">&nbsp;</td>
                 </tr>
                  <tr>
-                  <td class="labelCol"><label for="program"><%=t(:label_irm_report_code)%></label></td>
+                  <td class="labelCol"><label for="program"><%=t(:label_irm_report_program)%></label></td>
                   <td class="dataCol"><%=f.blank_select :program,available_report_programs ,{},{:id=>"program",:required=>true}%></td>
                   <td class="labelCol empty">&nbsp;</td>
                   <td class="dataCol empty">&nbsp;</td>
