--- a/app/views/reports/login_report/_html.html.erb
+++ b/app/views/reports/login_report/_html.html.erb
@@ -120,7 +120,7 @@
                     width: 120,
                     height: 40,
                     renderer: function(storeItem, item) {
-                        this.setTitle(storeItem.get('date') + '<br />' + storeItem.get('count'));
+                        this.setTitle(storeItem.get('date') + '<br />' + storeItem.get('total_count'));
                     }
             }
         }
