fixed: 调整边栏submit按钮大小样式

--- a/app/views/icm/incident_requests/_sidebar_relation_list.html.erb
+++ b/app/views/icm/incident_requests/_sidebar_relation_list.html.erb
@@ -10,7 +10,7 @@
             <tr>
               <td>
                 <div id="relation_select" style="float:left;">
-                  <%= lov_field_tag "icm_relation", Icm::IncidentRequest %>
+                  <%= lov_field_tag "icm_relation", Icm::IncidentRequest, :style => "width:110px;" %>
                 </div>
                   <div class="float-right">
                     <div class="button"><%= submit_tag(t(:add))%></div>
